@@ -3,7 +3,7 @@
 #
 #       ui/plumber.py
 #
-# Copyright (c) 2005, Edward Hervey <edward@fluendo.com>
+# Copyright (c) 2005, Edward Hervey <bilboed@bilboed.com>
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU Lesser General Public
